# task-python

./: .dockerignore  .env  .env.sample  .gitignore  Dockerfile  Makefile  README.md  README_vacancy.md  alembic.ini  config.py  constants.py  database.py  db.py  docker-compose.yaml  docker-compose.yml  example.env  main.py  manage.py  migration.Dockerfile  pyproject.toml  requirements.txt  schema.yml  service.py  services.json  settings.py  setup.cfg  status.py  structures.py  test-dump.json  tests.py  utils.py
API/: .env  .env-example  .gitignore  docker-compose.yml  readme.md  requests-examples.http  requirements.txt
Repositories/: ServiceRepo.py
ServicesLog/: alembic.ini  main.py  settings.py
alembic/: env.py
api/: __main__.py
api_services/: manage.py
app/: Dockerfile  constants.py  database.py  main.py  requirements.txt  settings.py
commands/: create_admin.py
config/: config.yaml
core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
database/: db.py  storage.py
db/: db_connect.py
docs/: index.html  openapi-schema.yml  swagger.html
func/: service.py
informer/: manage.py
managers/: auth.py  service.py  state.py  user.py
migrations/: env.py
model/: service.py
models/: __init__.py  activity.py  enums.py  service.py  state.py  user.py
resources/: auth.py  routes.py  service.py  state.py  user.py
routers/: __init__.py  log_router.py  service.py
schemas/: __init__.py  base.py  service.py  services_logs_schemas.py  services_schemas.py
services/: README.md  log_service.py  main.py  schemas.py  service.py  (+3 more)
(+153 files in other folders)
