[tool.poetry]
name = "task-python"
version = "0.1.0"
description = "test for tric-itpc"
authors = ["Pavel Khramov <paul.khramov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
SQLAlchemy = "^2.0.1"
pymongo = "^4.3.3"
flake8 = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
