[tool.poetry]
name = "task-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "task_python"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
