[tool.poetry]
name = "task-python"
version = "0.1.0"
description = ""
authors = ["spirin-vadim <vadis99@ya.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
asyncpg = "^0.28.0"
requests = "^2.31.0"
typer = {extras = ["all"], version = "^0.9.0"}
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
